Documentation: Apple Watch
This took forever

--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -69,6 +69,7 @@
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/pressfitcirclefinish7.jpg" width=600px alt=PressFitCircle>
 </div><br><br>
 
+<div class="myDiv" style><h3>Light Bulb in Fusion 360</h3></div>
 <div class="vidDiv">
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/image2.png"  width=600px  alt=TutorialBulbStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesTutBulb/tutbulbstep2.png"  width=600px  alt=TutorialBulbStep1>
@@ -126,9 +127,9 @@
         </div><br>
         <iframe width="420" height="345" src="https://www.youtube.com/embed/dCqYaNXHybk">
         </iframe>
-
 </div> <br><br>
 
+<div class="myDiv" style><h3>Pen in Fusion 360</h3></div>
 <div class="vidDiv">
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep1.png"  width=600px  alt=PenStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep2.png"  width=600px  alt=PenStep1>
@@ -203,78 +204,131 @@
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep41.png"  width=600px  alt=PenStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstepfinish.png"  width=600>
         <div class="myDiv">
-            Finally, chose an appearance by right clicking the different bodies of the pen and <strong>TA-DA!</strong> You have a finished pen
+            Finally, choose an appearance by right clicking the different bodies of the pen and <strong>TA-DA!</strong> You have a finished pen in Fusion 360
         </div>
 </div><br><br>
 
+<div class="myDiv" style><h3>Apple Watch in Fusion 360</h3></div>
 <div class="vidDiv">
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep1.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep2.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep3.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep4.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            First make a center rectangle with the length of 41 mm and width of 47.5 mm. Then extrude this rectangle 11.2 mm. Flip to the bottom of the cube and start a sketch on the bottom side. Draw a centered circle with a diameter of 24.6 mm 
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep5.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep6.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep7.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep8.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Extrude the circle -2.7 mm and change the view using the viewcube. Select the outer circular edge (the edge not touching anything) and fillet this edge 10 mm.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep9.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep10.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep11.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep12.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Select the bottom 4 edges of the extruded rectangle (the watch body) and fillet these edges 4 mm. Also fillet the top edges of the watch body 6 mm.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep13.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep14.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep15.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep16.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Select the corners of the watch body and fillet these 2 mm. Then select the top face of the watch body and extrude it -0.75 mm, cutting into the filleted rectangular prism. Then make a sketch from the top. Make a line that 129.4 mm long and is 13 to 13.5 mm from the x-axis.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep17.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep18.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep19.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep20.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Then draw a construction line down to the x axis from the end of the 129.4 mm line. Then draw 11.2 mm construction away from the other lines on x-axis. Then select the fit point spline and draw a outward curved line down to the x-axis to meet the end of the 11.2 mm line.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep21.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep22.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep23.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep24.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Delete all construction lines and draw a large construction line at the x-axis. Select all the lines of the sketch and mirror them over the construction line using the mirror feature. Then, about 30 mm from the end of the fit point spline, make a centered circle with a 4 mm diameter. <br><br> Note: If a shape has not been made yet, connect your last point with your first point to make a closed shape.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep25.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep26.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep27.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep28.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Continue making these circles, with their centers 8 mm away, until there are 7 holes. Then finish the sketch, extrude the sketch 2 mm, and move the sketch up 4 mm. Then start a new sketch at the other side of the watch body (so left of the watch body looking from the top).
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep29.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep30.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep31.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep32.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Make a 44 mm line 13 to 13.5 mm away from the x-axis (the red axis). Then make 12.3 mm construction line from the 44 mm line. Then make a 19.5 mm non-construction (normal) line from the mentioned construction line, and finally finish off these steps with 2 construction lines, one going down to the x-axis and one, which is a straight line on the x-axis, going 11.2 mm away from all the other lines
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep33.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep34.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep35.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep36.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Then select the fit point spline and make an outward curve down to the x-axis like before with the other wristband
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep37.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep38.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep39.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep40.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Zoom in on the 12.3 mm construction line and select the fit point spline. Remove the construction line a make a small hump that is a few millimeters tall. Then draw a large construction line on the x- axis, select all the other lines of the sketch, and mirror the lines over the construction line. Remember to connect the last point and first point to make a shape
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep41.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep42.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep43.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep44.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Then make an ellipse at the midpoint of the crests of the humps that is 27.6 mm tall and 6 mm wide
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep45.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep46.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep47.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep48.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Finish the sketch and extrude the shape 2 mm. Then move the mentioned extruded sketch up 4 mm.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep49.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep50.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep51.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep52.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            <strong>FINAL STRETCH!</strong> make 2 concentric circles, centered 12.5 mm away from the end of the wristband. One with a diameter of 3.7 mm and the other with a diameter of 10.8 mm. And then extrude this sketch a small amount (0.2 mm) as a new body. Then select the sphere from the create dropdown.
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep53.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep54.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep55.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep56.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Make a sphere with a diameter of 5 mm at the center of the extruded concentric circles and move this sphere up 3.5 mm. Then select automated modeling and select the sphere and "washer" for 'faces to connect'
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep57.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep58.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep59.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep60.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Select the wristband for 'bodies to avoid' and then wait to pick the most suitable option (In this case, Alternative 6 at the lowest volume)
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep61.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep62.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep63.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            Finally (Yes this is the end), press the eyeball for body 1 to make invisible (press it again to make it visible) and make a final sketch at back of the viewcube (zx plane). Make a centered circle with a 7 mm diameter with its center 11 mm away the right wristband (see image). Then make an ellipse that has its center 13 mm from the left wristband that is 12 mm wide and 4.5 mm tall. <br><br> Extrude these ellipses 21 mm, make the watch body visible again, and you are done
+        </div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstepfinish1.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstepfinish2.png"  width=600px  alt=AppleWatchStep1>
+        <div class="myDiv">
+            For asthetics, right click and select appearance for colors on the watch. So, <strong>TA-DA!</strong> You have created an apple watch in Fusion 360.
+        </div>
 </div> <br> <br>
 
+<div class="myDiv" style><h3>Using the Vinyl Cutter for a Name Tag</h3></div>
 <div class="vidDiv">
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/NameSticker/SaiStickerCAD.png"  width=600px  alt=MyNameSticker>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/NameSticker/SaiStickerFinish1.jpg"  width=600px  alt=MyNameSticker>
