--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -331,6 +331,13 @@
 <div class="myDiv" style><h3>Using the Vinyl Cutter for a Name Tag</h3></div>
 <div class="vidDiv">
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/NameSticker/SaiStickerCAD.png"  width=600px  alt=MyNameSticker>
+        <div class="myDiv">
+            Make a sketch from the top using the fit point spline feature. Draw bubble letters of your liking and finish sketch after connecting the last point to the first point (to complete the shape). Then export as dxf and turn the dxf into an svg using an online converter. Then print to vinyl cutter.
+        </div>
+        <br>
+        <div class="myDiv">
+            <h2>The Sticker making process</h2>
+        </div>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/NameSticker/SaiStickerFinish1.jpg"  width=600px  alt=MyNameSticker>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/NameSticker/SaiStickerFinish2.jpg"  width=600px  alt=MyNamticker>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/NameSticker/SaiStickerFinish3.jpg"  width=600px  alt=MyNameSticker>
