--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -129,8 +129,26 @@
         </iframe>
 </div> <br><br>
 
-<div class="myDiv" style><h3>Pen in Fusion 360</h3></div>
+<div class="myDiv" style><h2>Pen in Fusion 360</h2></div>
 <div class="vidDiv">
+        <div class="myDiv">
+            <h3>First Gather Measurements</h3>
+        </div> <br>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm1.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm2.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm3.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm4.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm5.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm6.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm7.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm8.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm9.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm10.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm11.jpg"  height=234px  alt=PenMeasurements>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penm12.jpg"  height=234px  alt=PenMeasurements>
+
+
+<div class="myDiv"> Then start using CAD</div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep1.png"  width=600px  alt=PenStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep2.png"  width=600px  alt=PenStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/ImagesPenCAD/penstep3.png"  width=600px  alt=PenStep1>
@@ -210,6 +228,27 @@
 
 <div class="myDiv" style><h3>Apple Watch in Fusion 360</h3></div>
 <div class="vidDiv">
+    <div class="myDiv">
+            <h3>First Gather Measurements</h3>
+        </div> <br>
+        <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm1.jpg"  height=234px  alt=PenMeasurements>
+     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm2.jpg"  height=234px  alt=PenMeasurements>
+      <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm3.jpg"  height=234px  alt=PenMeasurements>
+       <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm4.jpg"  height=234px  alt=PenMeasurements>
+        <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm5.jpg"  height=234px  alt=PenMeasurements>
+         <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm6.jpg"  height=234px  alt=PenMeasurements>
+          <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm7.jpg"  height=234px  alt=PenMeasurements>
+           <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm8.jpg"  height=234px  alt=PenMeasurements>
+            <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm9.jpg"  height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm10.jpg" height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm11.jpg" height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm12.jpg" height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm13.jpg" height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm14.jpg" height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm15.jpg" height=234px  alt=PenMeasurements>
+             <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/Watchm16.jpg" height=234px  alt=PenMeasurements>
+
+<div class="myDiv"> Then start using CAD</div>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep1.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep2.png"  width=600px  alt=AppleWatchStep1>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/AppleWatchCAD/watchstep3.png"  width=600px  alt=AppleWatchStep1>
