--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -455,6 +455,12 @@
   <div class="myDiv">
     Multimeter
   </div>
+
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4194.JPG" width=500px alt=KineticSculpture>
+    <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4198.JPG" width=500px alt=KineticSculpture>
+
+  
+  
   
 </div>
 </xmp>
