--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -459,7 +459,7 @@
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4194.JPG" width=500px alt=KineticSculpture>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4198.JPG" width=500px alt=KineticSculpture>
 
-  
+  <video src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4189.mov" width=500px alt=video!>
   
   
 </div>
