--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -386,9 +386,9 @@
 <div class="vidDiv">
   
   
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4095.JPG" width=500px alt=KineticSculpture>
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4191.JPG" width=500px alt=KineticSculpture>
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4186.JPG" width=500px alt=KineticSculpture>
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4095.JPG" width=500px alt=KineticSculpture>
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4191.jpg" width=500px alt=KineticSculpture>
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4186.jpg" width=500px alt=KineticSculpture>
   
   <div class="myDiv">
     I first tried to use gears, but in my case, they were cluncky and didn't fit well together. I also could not get the gears to work at a 90 degree angle so that the wheels could turn. 
@@ -396,8 +396,8 @@
   
   <br>
 
- <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4127.JPG" width=500px alt=KineticSculpture>
- 
+ <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4127.JPG" width=500px alt=KineticSculpture>
+ <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-FusionCar.png" width=500px alt=KineticSculpture>
   
   <div class="myDiv">
     Then after abandoning the gears idea, I was going to directly power the front wheel as my second prototype. In Fusion 360, I made a few circles for a base and wheels. <br> <strong> Add dimensions </strong>
@@ -411,8 +411,8 @@
   
   <br>
 
- <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4126.JPG" width=500px alt=KineticSculpture>
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4097.JPG" width=500px alt=KineticSculpture>
+ <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4126.JPG" width=500px alt=KineticSculpture>
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4097.jpg" width=500px alt=KineticSculpture>
 
   
   <div class="myDiv">
@@ -421,8 +421,8 @@
   
   <br>
 
-   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4174.JPG" width=500px alt=KineticSculpture>
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4176.JPG" width=500px alt=KineticSculpture>
+   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4174.jpg" width=500px alt=KineticSculpture>
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4176.jpg" width=500px alt=KineticSculpture>
 
 
   <div class="myDiv">
@@ -431,8 +431,8 @@
   
   <br>
 
-   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4175.JPG" width=500px alt=KineticSculpture>
-   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4178.JPG" width=500px alt=KineticSculpture>
+   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4175.jpg" width=500px alt=KineticSculpture>
+   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4178.jpg" width=500px alt=KineticSculpture>
 
     
   <div class="myDiv">
@@ -441,9 +441,9 @@
   
   <br>
 
-   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4183.JPG" width=500px alt=KineticSculpture>
-   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4185.JPG" width=500px alt=KineticSculpture>
-   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4186.JPG" width=500px alt=KineticSculpture>
+   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4183.jpg" width=500px alt=KineticSculpture>
+   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4185.jpg" width=500px alt=KineticSculpture>
+   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4186.jpg" width=500px alt=KineticSculpture>
 
   
   <div class="myDiv">
@@ -456,8 +456,8 @@
     Multimeter
   </div>
 
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4194.JPG" width=500px alt=KineticSculpture>
-    <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4198.JPG" width=500px alt=KineticSculpture>
+  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4194.jpg" width=500px alt=KineticSculpture>
+    <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4198.jpg" width=500px alt=KineticSculpture>
 
   <video src="../02_CAD/PressFitCircle/IMG-4189.mov" width=500px alt=video!>
   
