--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -459,48 +459,51 @@
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4194.jpg" width=500px alt=KineticSculpture>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4198.jpg" width=500px alt=KineticSculpture>
 
-  <video src="../02_CAD/PressFitCircle/IMG-4189.mov" width=500px alt=video!>
-  
-  <div class="myDiv">
-    Week 4 Code:<br><br>
-    const int potPin = A0;
-float potreadings;
-const int buttonPin = 2;  
-const int ledPin = 13;
-int buttonState = 0;
-void setup() {
-  // put your setup code here, to run once:
-  Serial.begin(9600);
-
-
-// initialize the LED pin as an output:
-  pinMode(ledPin, OUTPUT);
-  // initialize the pushbutton pin as an input:
-  pinMode(buttonPin, INPUT);
-
-
-
-
-   // initialize digital pin LED_BUILTIN as an output.
-  pinMode(13, OUTPUT);
-}
-
-
-void loop() {
-  potreadings = analogRead(potPin);
-  float adj_potreadings = potreadings * (5.0 /1023); // remember to put in the decimal with the 5 
-  Serial.println (adj_potreadings);//end of potentiometer and start of LED
-
-
-    digitalWrite(13, HIGH);  // turn the LED on (HIGH is the voltage level)
-  delay(75);                      // wait for a second
-  digitalWrite(13, LOW);   // turn the LED off by making the voltage LOW
-  delay(75);
-
-
-}
-
+  <video src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4189.webm" width=500px alt=video!></video><br>
+    <img src="https://i.giphy.com/media/cNmybkMf4eelxdboXN/giphy.webp" width=300px alt=360ofcargif>
   </div>
+  
+    <h3> Week 4 Code:</h3> <br><br>
+    <pre><code class="language-arduino">
+            const int potPin = A0;
+            float potreadings;
+            const int buttonPin = 2;  
+            const int ledPin = 13;
+            int buttonState = 0;
+            void setup() {
+              // put your setup code here, to run once:
+              Serial.begin(9600);
+
+
+            // initialize the LED pin as an output:
+              pinMode(ledPin, OUTPUT);
+              // initialize the pushbutton pin as an input:
+              pinMode(buttonPin, INPUT);
+
+
+
+
+               // initialize digital pin LED_BUILTIN as an output.
+              pinMode(13, OUTPUT);
+            }
+
+
+            void loop() {
+              potreadings = analogRead(potPin);
+              float adj_potreadings = potreadings * (5.0 /1023); // remember to put in the decimal with the 5 
+              Serial.println (adj_potreadings);//end of potentiometer and start of LED
+
+
+                digitalWrite(13, HIGH);  // turn the LED on (HIGH is the voltage level)
+              delay(75);                      // wait for a second
+              digitalWrite(13, LOW);   // turn the LED off by making the voltage LOW
+              delay(75);
+
+
+            }
+        </code></pre>
+
+  
 
 </div>
 </xmp>
