--- a/02_CAD/index.html
+++ b/02_CAD/index.html
@@ -459,8 +459,13 @@
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4194.jpg" width=500px alt=KineticSculpture>
     <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4198.jpg" width=500px alt=KineticSculpture>
 
-  <video src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4189.webm" width=500px alt=video!></video><br>
+
+  <br>
     <img src="https://i.giphy.com/media/cNmybkMf4eelxdboXN/giphy.webp" width=300px alt=360ofcargif>
+    <video width="320" height="240" controls>
+        <source src="./PHYS-S12-IntroToDigitalFabrication/02_CAD/PressFitCircle/IMG-4235.webm" type=video/webm>
+    </video>
+
   </div>
   
     <h3> Week 4 Code:</h3> <br><br>
