--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week3: Kinetic Sculptures](./03_Kinetics/index.html)
     </div>
   </div>
 
