MajorChange: Week 4 added

--- a/03_Kinetics/index.html
+++ b/03_Kinetics/index.html
@@ -25,7 +25,7 @@
 
 #### Week 3: Kinetic Scuptures: Carboard Car
 
-
+<html>
 <div class="myDiv" style><h3>Week 3: Kinetic Sculptures</h3></div>
 <div class="vidDiv">
   
@@ -106,14 +106,22 @@
         Using the multimeter, the voltage (5.96 V) and the Resistance (1874 Ω) were found. Using the formula <br>V/R= I:<br> 5.96/1874 resulted in <br><strong>3.18 mA</strong>
     </div>
 
+
+
+
   <br>
     <img src="https://i.giphy.com/media/cNmybkMf4eelxdboXN/giphy.webp" width=300px alt=360ofcargif>
     <div><video height="500" controls>
-        <source src="./PressFitCircle/IMG_4235.mp4" type=video/mp4>
+        <source src="./IMG_4235.mp4" type=video/mp4>
     </video></div>
   </div>
-  
-    <h3> Week 4 Code:</h3> <br><br>
+
+
+
+  <html>
+ <html> <!--
+    <h3><br> Week 4 Code:</h3> <br><br>
+    <div style="border-width: thick; border-color: black; background-color: beige;">
     <pre><code class="language-arduino">
             const int potPin = A0;
             float potreadings;
@@ -122,9 +130,10 @@
             int buttonState = 0;
             void setup() {
               // put your setup code here, to run once:
-              Serial.begin(9600);
+              Serial.begin(9600);</html>
 
 
+<html>
             // initialize the LED pin as an output:
               pinMode(ledPin, OUTPUT);
               // initialize the pushbutton pin as an input:
@@ -151,11 +160,12 @@
 
 
             }
-        </code></pre>
+        </code></pre></html></div>
 
-  
-
+--></html>
+</code>
 </div>
+</html>
 </xmp>
 
 
