--- a/index.html
+++ b/index.html
@@ -32,11 +32,24 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Week3: Kinetic Sculptures](./03_Kinetics/index.html)
+      [Week 3: Kinetic Sculptures](./03_Kinetics/index.html)
     </div>
   </div>
 
   <div class="row">
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Week 4: Coding the Kinetic Sculptures](./04_ArduinoIntro/index.html)
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Broken Link]()
+    </div>
+    <div class="col-sm-4">
+      ![sewing image](./01_intro/sew.png) 
+      [Broken Link]()
+
+      <div class="row">
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
       [Broken Link]()
