Smoll Fix after Major Change

--- a/04_ArduinoIntro/index.html
+++ b/04_ArduinoIntro/index.html
@@ -50,7 +50,7 @@
 
   <html>
     <div class="myDiv"><h2><br><strong> Week 4 Code:</strong></h2> <br></div><br>
-    <div style="border-width: thick; border-color: black; background-color: beige;">
+    <div style="border-width: thick; border-color: black; background-color: beige; text-align: left;">
     <pre><code class="language-arduino">
             const int potPin = A0;
             float potreadings;
@@ -91,7 +91,14 @@
             }
         </code></pre></html></div></div>
 
-  
+<br><div class="myDiv">
+    <h2>What did I learn?</h2>
+</div>
+
+<div class="myDiv">
+    <h2>What can I do better next time?</h2>
+</div>
+
 </code>
 </div>
 </html>
