--- a/03_Kinetics/index.html
+++ b/03_Kinetics/index.html
@@ -28,7 +28,18 @@
 <html>
 <div class="myDiv" style><h3>Week 3: Kinetic Sculptures</h3></div>
 <div class="vidDiv">
-  
+  <div class="myDiv">
+      First I drew out my ideas on a notebook. Below, sketches for both prototypes can be seen
+  </div>
+
+  <img src="./IMG-4236.jpg" width=500px alt=SketchSculpture>
+
+  <div class="myDiv">
+      My First Prototype:<br>
+      Issues:<br>
+      Solution:<br>
+      My Second Prototype: <br>
+  </div>
   
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4095.JPG" width=500px alt=KineticSculpture>
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4191.jpg" width=500px alt=KineticSculpture>
@@ -116,10 +127,16 @@
     </video></div>
   </div>
 
+<div class="myDiv">
+    <h2>What did I learn?</h2>
+</div>
 
+<div class="myDiv">
+    <h2>What can I do better next time?</h2>
+</div>
 
   <html>
- <html> <!--
+ <!-- <html>
     <h3><br> Week 4 Code:</h3> <br><br>
     <div style="border-width: thick; border-color: black; background-color: beige;">
     <pre><code class="language-arduino">
