Taking a break (WEEK 3 DONE)

--- a/04_ArduinoIntro/index.html
+++ b/04_ArduinoIntro/index.html
@@ -30,11 +30,13 @@
 <div class="vidDiv">
   
   
-  <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4095.JPG" width=500px alt=KineticSculpture>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4177.jpg" width= 500px alt = Unwired_Car>
   
   <div class="myDiv">
-    Schematics
+    After building the cardboard car, the car needed some electronics to work
   </div>
+    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4190.jpg" height= 500px alt = Unwired_Car>
+  <div class="myDiv">So here is a schematic of the wiring and how it turned out</div>
   
   <br>
 
