--- a/03_Kinetics/index.html
+++ b/03_Kinetics/index.html
@@ -34,11 +34,13 @@
 
   <img src="./IMG-4236.jpg" width=500px alt=SketchSculpture>
 
-  <div class="myDiv">
-      My First Prototype:<br>
-      Issues:<br>
-      Solution:<br>
-      My Second Prototype: <br>
+  <div class="leftmyDiv">
+    <ul>
+      <li>My First Prototype: I first sketched out a way for the motor to turn gears which are at a 90 degree angle. These 90-degree gears will then turn the wheels, causing the car to move.</li><br>
+      <li>Issues: With the first prototype, the gears were very clunky and did not funtion at 90 degree angles well</li><br>
+      <li>Solution: So instead of using gears, I will use FWD to directly drive the car by using a motor</li><br>
+      <li>My Second Prototype: The second prototype was sketched like a FWD model. This Second prototype was eventually turned into the car</li><br>
+  </ul>
   </div>
   
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/50540287ba3b17ce737a807d7a2aa302f02a198a/02_CAD/PressFitCircle/IMG-4095.JPG" width=500px alt=KineticSculpture>
@@ -46,7 +48,7 @@
   <img src="https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4186.jpg" width=500px alt=KineticSculpture>
   
   <div class="myDiv">
-    I first tried to use gears, but in my case, they were cluncky and didn't fit well together. I also could not get the gears to work at a 90 degree angle so that the wheels could turn. 
+    As said above, I first tried to use gears, but in my case, they were cluncky and didn't fit well together. I also could not get the gears to work at a 90 degree angle so that the wheels could turn. 
   </div>
   
   <br>
@@ -101,7 +103,7 @@
 
   
   <div class="myDiv">
-    Lastly, the guard rails/ more rectangles to keep electronics safe were added and the elctronics were placed in.
+    Lastly, the guard rails/ more rectangles to keep electronics safe were added and the electronics were placed in.
   </div>
   
   <br>
@@ -128,11 +130,13 @@
   </div>
 
 <div class="myDiv">
-    <h2>What did I learn?</h2>
+    <h2>What did I learn?</h2><br>
+    <h5>I learned how to make multiple prototypes in order to face issues, assembling projects efficiently without making it look messy, giving live demos to present my work, wiring a power supply, and I also practiced some coding. I learned how to embed downloaded videos and gifs. Overall, the skills learned in this exercise will definitiely be used in the final project because I intend to make a car-like project (lawnmower).</h5><br>
 </div>
 
 <div class="myDiv">
-    <h2>What can I do better next time?</h2>
+    <h2>What can I do better next time?</h2><br>
+    <h5>Next time, I should make the wheels sturdier and manage time better because I working until the last minute. I should also hide the electronics under a cover because in the current model, the electronics are exposed. And if given more time to complete the project, an ambitious goal is to make turning possible.</h5><br>
 </div>
 
   <html>
@@ -170,7 +174,7 @@
               Serial.println (adj_potreadings);//end of potentiometer and start of LED
 
 
-                digitalWrite(13, HIGH);  // turn the LED on (HIGH is the voltage level)
+              digitalWrite(13, HIGH);  // turn the LED on (HIGH is the voltage level)
               delay(75);                      // wait for a second
               digitalWrite(13, LOW);   // turn the LED off by making the voltage LOW
               delay(75);
