--- a/04_ArduinoIntro/index.html
+++ b/04_ArduinoIntro/index.html
@@ -35,23 +35,22 @@
   <div class="myDiv">
     After building the cardboard car, the car needed some electronics to work
   </div>
+    <img src = "./SaiCar-SchematicHandDrawn.jpg" height= 500px alt = Schematic>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4190.jpg" height= 500px alt = Unwired_Car>
-  <div class="myDiv">So here is a schematic of the wiring and how it turned out</div>
+  <div class="myDiv">So here is a schematic of the wiring and how the actual electronics look like for the car. The potentiometer turns on and off the motor by sppeding up or slowing down the car/motor. The LEDs are for decoration and can be coded to do many things
+  </div> <br>
   
-  <br>
+  <div><video height="500" controls>
+        <source src="./IMG2_4235.mp4" type=video/mp4>
+    </video></div>
 
- <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-FusionCar.png" width=500px alt=KineticSculpture>
-  
-  <div class="myDiv">
-    Additionals
-  </div>
-  
+  <div class="myDiv"><h3>The Final Result!</h3></div>
   <br>
 
 
 
   <html>
-    <div class="myDiv"><h2><br><strong> Week 4 Code:</strong></h2> <br></div><br>
+    <div class="myDiv"><h2><br><strong> Week 4 Code:</strong></h2> <br><h5>This code blinks the light on PWM D13 and also codes the potentiometer to work as a speed dial. It also gives the user on the laptop the ability to see the amount of voltage passing through the potentiometer</h5><br></div><br>
     <div style="border-width: thick; border-color: black; background-color: beige; text-align: left;">
     <pre><code class="language-arduino">
             const int potPin = A0;
@@ -95,11 +94,11 @@
 
 <br><div class="myDiv">
     <h2>What did I learn?</h2>
+    <br><h5> I learned how to code arduino faster while effectively using the resources provided to me</h5>
 </div>
+<div class="vidDiv"><img src = "./picforfunWeek4.jpg" height=500px alt=arduinopic+programming></div>
+Image Source: https://circuitdigest.com/article/getting-started-with-arduino-programming-using-arduino-ide 
 
-<div class="myDiv">
-    <h2>What can I do better next time?</h2>
-</div>
 
 </code>
 </div>
