veryveryveysmollfix (jpg ->JPG)

--- a/04_ArduinoIntro/index.html
+++ b/04_ArduinoIntro/index.html
@@ -35,7 +35,7 @@
   <div class="myDiv">
     After building the cardboard car, the car needed some electronics to work
   </div>
-    <img src = "./SaiCar-SchematicHandDrawn.jpg" height= 500px alt = Schematic>
+    <img src = "./SaiCar-SchematicHandDrawn.JPG" height= 500px alt = Schematic>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4190.jpg" height= 500px alt = Unwired_Car>
   <div class="myDiv">So here is a schematic of the wiring and how the actual electronics look like for the car. The potentiometer turns on and off the motor by sppeding up or slowing down the car/motor. The LEDs are for decoration and can be coded to do many things
   </div> <br>
